chore: update extension name for release

--- a/extension.toml
+++ b/extension.toml
@@ -1,10 +1,10 @@
-id = "vscode-icons"
-name = "VSCode Icons Theme"
+id = "clean-vscode-icons"
+name = "Clean VSCode Icons Theme"
 version = "0.1.0"
 schema_version = 1
 authors = [
     "Jacobtread <jacobtread@gmail.com>",
     "Mhammed Talhaouy (talhaouycoding@gmail.com)",
 ]
-description = "Icon theme for Zed"
+description = "Icon theme for Zed packed with icons for many extensions and folders"
 repository = "https://github.com/jacobtread/zed-vscode-icons"
